Update backend: LeaseController fixes, invoice endpoints, stability improvements