@@ -1,14 +1,16 @@
 package com.devsop.project.apartmentinvoice.controller;
 
+import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import org.springframework.format.annotation.DateTimeFormat;
+import org.springframework.http.ResponseEntity;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PathVariable; 
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -18,11 +20,17 @@ import org.springframework.web.bind.annotation.RestController;
 
 import com.devsop.project.apartmentinvoice.entity.Lease;
 import com.devsop.project.apartmentinvoice.entity.Lease.Status;
+import com.devsop.project.apartmentinvoice.entity.Room;
+import com.devsop.project.apartmentinvoice.entity.Tenant;
 import com.devsop.project.apartmentinvoice.repository.LeaseRepository;
 import com.devsop.project.apartmentinvoice.service.LeaseService;
 
 import jakarta.validation.Valid;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
 import lombok.RequiredArgsConstructor;
+import lombok.Setter;
 
 @RestController
 @RequestMapping("/api/leases")
@@ -32,82 +40,146 @@ public class LeaseController {
   private final LeaseRepository leaseRepo;
   private final LeaseService leaseService;
 
+  // ---------------------- DTOs ----------------------
+
+  @Getter @Setter @AllArgsConstructor @NoArgsConstructor
+  public static class RoomView {
+    private Long id;
+    private Integer number;
+    private String status;
+  }
+
+  @Getter @Setter @AllArgsConstructor @NoArgsConstructor
+  public static class TenantView {
+    private Long id;
+    private String name;
+    private String phone;
+    private String lineId;
+  }
+
+  @Getter @Setter @AllArgsConstructor @NoArgsConstructor
+  public static class LeaseView {
+    private Long id;
+    private Status status;
+    private LocalDate startDate;
+    private LocalDate endDate;
+
+    private BigDecimal monthlyRent;
+    private BigDecimal depositBaht;
+
+    private String customName;
+    private String customIdCard;
+    private String customAddress;
+    private String customRules;
+
+    private Boolean settled;
+    private LocalDate settledDate;
+
+    private RoomView room;
+    private TenantView tenant;
+  }
+
+  private static LeaseView toView(Lease l) {
+    Room r = l.getRoom();
+    Tenant t = l.getTenant();
+    RoomView rv = (r == null) ? null : new RoomView(r.getId(), r.getNumber(), r.getStatus());
+    TenantView tv = (t == null) ? null : new TenantView(t.getId(), t.getName(), t.getPhone(), t.getLineId());
+    LeaseView v = new LeaseView();
+    v.setId(l.getId());
+    v.setStatus(l.getStatus());
+    v.setStartDate(l.getStartDate());
+    v.setEndDate(l.getEndDate());
+    v.setMonthlyRent(l.getMonthlyRent());
+    v.setDepositBaht(l.getDepositBaht());
+    v.setCustomName(l.getCustomName());
+    v.setCustomIdCard(l.getCustomIdCard());
+    v.setCustomAddress(l.getCustomAddress());
+    v.setCustomRules(l.getCustomRules());
+    v.setSettled(l.getSettled());
+    v.setSettledDate(l.getSettledDate());
+    v.setRoom(rv);
+    v.setTenant(tv);
+    return v;
+  }
+
   // ---------------------- Query ----------------------
 
-  /**
-   * ดึงรายการสัญญาทั้งหมด (หรือกรองด้วย status)
-   * ใช้ fetch-join เพื่อให้ room/tenant ถูกโหลดมาพร้อมกัน (เลี่ยง Lazy proxy)
-   */
   @GetMapping
   @Transactional(readOnly = true)
-  public List<Lease> all(@RequestParam(required = false) Status status) {
+  public List<LeaseView> all(@RequestParam(required = false) Status status) {
     List<Lease> leases = leaseRepo.findAllWithRefs();
     if (status != null) {
-      return leases.stream()
-          .filter(l -> l.getStatus() == status)
-          .collect(Collectors.toList());
+      leases = leases.stream().filter(l -> l.getStatus() == status).toList();
     }
-    return leases;
+    return leases.stream().map(LeaseController::toView).toList();
   }
 
-  /**
-   * ดึงรายละเอียดสัญญาเดียว (fetch-join)
-   */
   @GetMapping("/{id}")
   @Transactional(readOnly = true)
-  public Lease get(@PathVariable Long id) {
-    return leaseRepo.findByIdWithRefs(id).orElseThrow();
+  public LeaseView get(@PathVariable Long id) {
+    Lease l = leaseRepo.findByIdWithRefs(id).orElseThrow();
+    return toView(l);
   }
 
-  /**
-   * ดึงสัญญาตามห้อง (option: activeOnly)
-   */
   @GetMapping("/by-room/{roomId}")
   @Transactional(readOnly = true)
-  public List<Lease> byRoom(@PathVariable Long roomId,
-                            @RequestParam(required = false) Boolean activeOnly) {
+  public List<LeaseView> byRoom(@PathVariable Long roomId,
+                                @RequestParam(required = false) Boolean activeOnly) {
     List<Lease> leases = leaseRepo.findByRoomIdWithRefs(roomId);
     if (Boolean.TRUE.equals(activeOnly)) {
-      return leases.stream()
-          .filter(l -> l.getStatus() == Status.ACTIVE)
-          .collect(Collectors.toList());
+      leases = leases.stream().filter(l -> l.getStatus() == Status.ACTIVE).toList();
     }
-    return leases;
+    return leases.stream().map(LeaseController::toView).toList();
   }
 
-  /**
-   * ดึงสัญญาตามผู้เช่า (fetch-join)
-   */
+  @GetMapping("/active")
+  @Transactional(readOnly = true)
+  public ResponseEntity<LeaseView> getActiveByRoomNumber(@RequestParam Integer roomNumber) {
+    return leaseRepo.findFirstActiveByRoomNumber(roomNumber)
+        .map(lease -> ResponseEntity.ok(toView(lease)))
+        .orElse(ResponseEntity.noContent().build());
+  }
+
+  @GetMapping("/history/{roomNumber}")
+  @Transactional(readOnly = true)
+  public List<LeaseView> historyByRoomNumber(@PathVariable Integer roomNumber) {
+    return leaseRepo.findHistoryByRoomNumberWithRefs(roomNumber)
+                    .stream().map(LeaseController::toView).collect(Collectors.toList());
+  }
+
   @GetMapping("/by-tenant/{tenantId}")
   @Transactional(readOnly = true)
-  public List<Lease> byTenant(@PathVariable Long tenantId) {
-    return leaseRepo.findByTenantIdWithRefs(tenantId);
+  public List<LeaseView> byTenant(@PathVariable Long tenantId) {
+    return leaseRepo.findByTenantIdWithRefs(tenantId)
+                    .stream().map(LeaseController::toView).toList();
   }
 
-  // ---------------------- Create ----------------------
+  // ---------------------- Create / Update / End / Settle ----------------------
 
   @PostMapping
-  public Lease create(@Valid @RequestBody Lease draft) {
-    return leaseService.createLease(draft);
+  public LeaseView create(@Valid @RequestBody Lease draft) {
+    return toView(leaseService.createLease(draft));
   }
-
-  // ---------------------- Update ----------------------
 
   @PutMapping("/{id}")
-  public Lease update(@PathVariable Long id, @RequestBody Lease patch) {
-    return leaseService.updateLease(id, patch);
+  public LeaseView update(@PathVariable Long id, @RequestBody Lease patch) {
+    return toView(leaseService.updateLease(id, patch));
   }
-
-  // ---------------------- End Lease ----------------------
-
+  
   @PostMapping("/{id}/end")
-  public Lease end(@PathVariable Long id,
-                   @RequestParam(required = false)
-                   @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate endDate) {
-    return leaseService.endLease(id, endDate);
+  public LeaseView end(@PathVariable Long id,
+                       @RequestParam(required = false)
+                       @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate endDate) {
+    return toView(leaseService.endLease(id, endDate));
   }
-
-  // (Optional) ลบสัญญา - ระวังข้อมูลประวัติ
+  
+  @PostMapping("/{id}/settle")
+  public LeaseView settle(@PathVariable Long id,
+                          @RequestParam(required = false)
+                          @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate date) {
+    return toView(leaseService.settleLease(id, date));
+  }
+  
   @DeleteMapping("/{id}")
   public void delete(@PathVariable Long id) {
     leaseRepo.deleteById(id);
